--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "8735907f",
+   "id": "f25dcf09",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "fa3c51ff",
+   "id": "e1416b9f",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "3930990b",
+   "id": "a26c58c2",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "40d44e26",
+   "id": "31c0aa5d",
    "metadata": {},
    "outputs": [
     {
@@ -1319,8 +1319,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 234,
+   "id": "b0300e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 20 = 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "print(f'{x} + {y} = {x+y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4f576db8",
+   "id": "4a7867f2",
    "metadata": {},
    "outputs": [],
    "source": []
