--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "f25dcf09",
+   "id": "00621a29",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "e1416b9f",
+   "id": "bb3332d6",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "a26c58c2",
+   "id": "856a09b7",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "31c0aa5d",
+   "id": "a723bd66",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "b0300e17",
+   "id": "2739d296",
    "metadata": {},
    "outputs": [
     {
@@ -1339,8 +1339,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 236,
+   "id": "aa26618c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Jaspreet\n",
+      "Enter your city: Ambala City\n",
+      "Hello, Jaspreet from Ambala City.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "city = input('Enter your city: ')\n",
+    "print(f'Hello, {name} from {city}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4a7867f2",
+   "id": "754644d6",
    "metadata": {},
    "outputs": [],
    "source": []
