--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "00621a29",
+   "id": "2aa4b903",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "bb3332d6",
+   "id": "9df148d6",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "856a09b7",
+   "id": "1cff7c35",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "a723bd66",
+   "id": "35bff96a",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "2739d296",
+   "id": "873a00c0",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "aa26618c",
+   "id": "93bcecd6",
    "metadata": {},
    "outputs": [
     {
@@ -1361,8 +1361,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 238,
+   "id": "68bac001",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = '10'\n",
+    "y = '10'\n",
+    "x == y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "754644d6",
+   "id": "d3879ed9",
    "metadata": {},
    "outputs": [],
    "source": []
