--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "2aa4b903",
+   "id": "dc368d35",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "9df148d6",
+   "id": "c9572f90",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "1cff7c35",
+   "id": "50582fd4",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "35bff96a",
+   "id": "45b52656",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "873a00c0",
+   "id": "17ce7986",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "93bcecd6",
+   "id": "4be70379",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "68bac001",
+   "id": "1fc84da9",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3879ed9",
+   "id": "e85d89b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Jaspreet':\n",
+    "    print('Hello, boss!')\n",
+    "    print('It is so great to see you again!')\n",
+    "elif name == 'someone else':\n",
+    "    print('That is a very strange name...')\n",
+    "else:\n",
+    "    print(f'Hello, {name}. Who are you?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c2bf507",
    "metadata": {},
    "outputs": [],
    "source": []
