--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "dc368d35",
+   "id": "ce4370be",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "c9572f90",
+   "id": "403633df",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "50582fd4",
+   "id": "b668c4fa",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "45b52656",
+   "id": "b8c51278",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "17ce7986",
+   "id": "387506ff",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "4be70379",
+   "id": "492ec314",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "1fc84da9",
+   "id": "8fd1513d",
    "metadata": {},
    "outputs": [
     {
@@ -1384,10 +1384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e85d89b9",
+   "execution_count": 241,
+   "id": "11445b9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: atttd\n",
+      "Hello, atttd. Who are you?\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')\n",
     "\n",
@@ -1403,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c2bf507",
+   "id": "d39569ee",
    "metadata": {},
    "outputs": [],
    "source": []
