--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "ce4370be",
+   "id": "cead10bf",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "403633df",
+   "id": "7516581d",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "b668c4fa",
+   "id": "6fadab9b",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "b8c51278",
+   "id": "1fcd1ec3",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "387506ff",
+   "id": "38f92337",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "492ec314",
+   "id": "ead475bb",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "8fd1513d",
+   "id": "8e4ecd4f",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "11445b9d",
+   "id": "ed20e720",
    "metadata": {},
    "outputs": [
     {
@@ -1411,8 +1411,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 245,
+   "id": "f4e6f34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: zebra\n",
+      "Enter second word: zebra\n",
+      "zebra and zebra are the same!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first < second:  \n",
+    "    print(f'{first} comes before {second}')\n",
+    "elif first > second:\n",
+    "    print(f'{second} comes before {first}')\n",
+    "else:  # implicitly, this is =\n",
+    "    print(f'{first} and {second} are the same!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d39569ee",
+   "id": "e7b9b776",
    "metadata": {},
    "outputs": [],
    "source": []
