--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "cead10bf",
+   "id": "3b0940dc",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "7516581d",
+   "id": "c94f1481",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "6fadab9b",
+   "id": "49868352",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "1fcd1ec3",
+   "id": "aa816c58",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "38f92337",
+   "id": "a5115688",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "ead475bb",
+   "id": "40eb4bf8",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "8e4ecd4f",
+   "id": "ad1b0b28",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "ed20e720",
+   "id": "5c06bf26",
    "metadata": {},
    "outputs": [
     {
@@ -1411,17 +1411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "id": "f4e6f34a",
+   "execution_count": 246,
+   "id": "6d2c5ecd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first word: zebra\n",
-      "Enter second word: zebra\n",
-      "zebra and zebra are the same!\n"
+      "Enter first word: \n",
+      "Enter second word: \n",
+      " and  are the same!\n"
      ]
     }
    ],
@@ -1440,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b9b776",
+   "id": "988629cc",
    "metadata": {},
    "outputs": [],
    "source": []
