--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "3b0940dc",
+   "id": "84c06991",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "c94f1481",
+   "id": "922039f7",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "49868352",
+   "id": "9b6e88fb",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "aa816c58",
+   "id": "bc0adc0f",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "a5115688",
+   "id": "75f21d42",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "40eb4bf8",
+   "id": "24cb920c",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "ad1b0b28",
+   "id": "83f48288",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "5c06bf26",
+   "id": "4d82f1b5",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "6d2c5ecd",
+   "id": "42136957",
    "metadata": {},
    "outputs": [
     {
@@ -1439,8 +1439,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 250,
+   "id": "7e938445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (x == 10 and \n",
+    "    y == 20):\n",
+    "    print('Yes, both are what you want')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "988629cc",
+   "id": "8396c401",
    "metadata": {},
    "outputs": [],
    "source": []
