--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "3d01fd0f",
+   "id": "19db3705",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "09932cb9",
+   "id": "42b014fc",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "8e886159",
+   "id": "91538a2f",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "83036d81",
+   "id": "b941b3cb",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "3e7359a9",
+   "id": "11714eec",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "63105764",
+   "id": "d3232a91",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "e51b75af",
+   "id": "fa76a856",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "3b799c23",
+   "id": "d890d144",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "caaf9202",
+   "id": "9a1444cd",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "34e5bde2",
+   "id": "3a8c37d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,16 +1451,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ebf69b8d",
+   "execution_count": 254,
+   "id": "47120a5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greater than 10\n",
+      "Greater than 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 50\n",
+    "\n",
+    "if x > 10:\n",
+    "    print('Greater than 10')\n",
+    "if x > 30:\n",
+    "    print('Greater than 30')\n",
+    "if x > 50:\n",
+    "    print('Greater than 50')\n",
+    "if x > 70:\n",
+    "    print('Greater than 70')\n",
+    "if x > 90:\n",
+    "    print('Greater than 90')\n",
+    "if x > 110:\n",
+    "    print('Greater than 110')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1adb4687",
+   "id": "29f14c8b",
    "metadata": {},
    "outputs": [],
    "source": []
