--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -1,12 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "716af3bc",
+   "cell_type": "markdown",
+   "id": "db9cbf76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Agenda\n",
+    "\n",
+    "1. Recap of day 1\n",
+    "2. Q&A\n",
+    "3. Exercise\n",
+    "4. Loops\n",
+    "    - `for` loops\n",
+    "    - indexes (or not)\n",
+    "    - `while` loops\n",
+    "    - controlling our loops with `break` and `continue`\n",
+    "5. Lists\n",
+    "    - "
+   ]
   }
  ],
  "metadata": {
