--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db9cbf76",
+   "id": "40cf9c4d",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -16,8 +16,26 @@
     "    - `while` loops\n",
     "    - controlling our loops with `break` and `continue`\n",
     "5. Lists\n",
-    "    - "
+    "    - Creating lists\n",
+    "    - Working with lists\n",
+    "    - How lists are similar to (and different from) strings\n",
+    "    - List methods\n",
+    "6. Converting from strings to lists (and back)\n",
+    "    - `str.split`\n",
+    "    - `str.join`\n",
+    "7. Tuples\n",
+    "    - Creating tuples\n",
+    "    - Why do we need tuples?\n",
+    "    - Tuple unpacking (which is very useful)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fa4db38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
