--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40cf9c4d",
+   "id": "e1fe1226",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -30,12 +30,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fa4db38",
+   "cell_type": "markdown",
+   "id": "dcde0a93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Recap from yestreda"
+   ]
   }
  ],
  "metadata": {
