--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1fe1226",
+   "id": "3838c6ff",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -31,10 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcde0a93",
+   "id": "afd740a8",
    "metadata": {},
    "source": [
-    "# Recap from yestreda"
+    "# Recap from yesterday\n",
+    "\n",
+    "1. Values and variables\n",
+    "    - Values are nouns, and each value has a *type* associated with it. Yesterday, we talked about three main types, `int` (whole numbers), `float` (numbers with a decimal point), and `str` (strings, containing text)\n",
+    "    - If we want to refer to a value, we can use a *variable*. We assign a value to a variable with `=`\n",
+    "        - If the variable doesn't already exist, then it is created at assignment time\n",
+    "        - If the variable does already exist, then assignment breaks the connection between the old value and the variable, and makes a new one with the new value and the variable."
    ]
   }
  ],
