--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3838c6ff",
+   "id": "0a1a10e2",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd740a8",
+   "id": "04bd38b8",
    "metadata": {},
    "source": [
     "# Recap from yesterday\n",
@@ -40,7 +40,7 @@
     "    - Values are nouns, and each value has a *type* associated with it. Yesterday, we talked about three main types, `int` (whole numbers), `float` (numbers with a decimal point), and `str` (strings, containing text)\n",
     "    - If we want to refer to a value, we can use a *variable*. We assign a value to a variable with `=`\n",
     "        - If the variable doesn't already exist, then it is created at assignment time\n",
-    "        - If the variable does already exist, then assignment breaks the connection between the old value and the variable, and makes a new one with the new value and the variable."
+    "        - If the variable does already exist, then assignment breaks the connection between the old value and the variable, and makes a new one with the new value and the variable.\n"
    ]
   }
  ],
