--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -469,8 +469,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "deaa1eda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"billyboy\") > 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b18c89",
    "metadata": {},
    "outputs": [],
    "source": []
