--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f13e7859",
+   "id": "b5a04288",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a333b09",
+   "id": "5324be6f",
    "metadata": {},
    "source": [
     "# Recap from yesterday\n",
@@ -45,7 +45,13 @@
     "    - Some operators, like `+`, can work on more than one type of data\n",
     "    - Some operators, like `==`, return a *Boolean* value, meaning `True` or `False`. They indicate whether a condition is `True` or not. We can always use `==` and `!=` on any values of any sorts, but we can only use `<` and `>` on values that know what to do with them.\n",
     "3. Conditions\n",
-    "    - We can use `if` to execute code only if a particular expression is `True`. That can be the"
+    "    - We can use `if` to execute code only if a particular expression is `True`. That can be the result of `==` or it can be the result of a method call, such as `str.isdigit`, which returns `True` if the contents of the string are all digits (0-9).\n",
+    "    - If the expression is `True`, then the block following the `if` executes. Note that the `if` needs `:` at the end of the line, and the block must be indented. When the indentation ends, the block ends as well. Inside of the block, we can have any code we want.\n",
+    "    - If the expression (on the `if`) is `False`, and if there is an `else` clause, then its block (also after a `:`, and indented) is executed.\n",
+    "    - If we want more clauses and conditions, we can have `elif` after `if` but before (optionally) `else`. These are checked in order, and the first one that has a `True` value runs; the rest are ignored.\n",
+    "4. Numbers\n",
+    "    - `int` -- whole numbers\n",
+    "        - "
    ]
   }
  ],
