--- a/Reuven - September 3rd.ipynb
+++ b/Reuven - September 3rd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5a04288",
+   "id": "d6cacd5b",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5324be6f",
+   "id": "274960dd",
    "metadata": {},
    "source": [
     "# Recap from yesterday\n",
@@ -51,7 +51,15 @@
     "    - If we want more clauses and conditions, we can have `elif` after `if` but before (optionally) `else`. These are checked in order, and the first one that has a `True` value runs; the rest are ignored.\n",
     "4. Numbers\n",
     "    - `int` -- whole numbers\n",
-    "        - "
+    "        - If we have another type (e.g., string or float) and want to get an `int` back, we run `int` on that value, and get a new int returned\n",
+    "    - `float` -- numbers with a decimal point and a fractional part\n",
+    "    - We have a variety of operators we can use on our numbers: `+`, `-`, `*`, `/`, `//`, `**`, `%`\n",
+    "    - If we mix ints and floats, then the entire expression just uses floats\n",
+    "    - `int` is faster and smaller in memory, but doesn't handle fractional numbers\n",
+    "    - `float` is slower and less precise because of the way that binary/decimal conversions happen. It does actually have a min and max value\n",
+    "5. Strings\n",
+    "    - We can define strings with either `''` or `\"\"`, so long as the string is on a single line of code\n",
+    "    - Inside of the quotes, we can "
    ]
   }
  ],
